--- a/src/app/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/confirmation-modal/confirmation-modal.component.html
@@ -1,1 +1,16 @@
-<p>confirmation-modal works!</p>
+<div class="modal" [ngClass]="{'confirmation-modal-open': isOpen}">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <p class="modal-title">Are you sure, you want to login?</p>
+        <button type="button" class="close" (click)="closeModal()">
+          <span>&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <button type="button" class="btn btn-success" (click)="confirm()">Yes</button>
+        <button type="button" class="btn btn-danger" (click)="closeModal()">No</button>
+      </div>
+    </div>
+  </div>
+</div>
