login confirmation event

--- a/src/app/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/confirmation-modal/confirmation-modal.component.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <p class="modal-title">Are you sure, you want to login?</p>
+        <p class="modal-title">Are you sure, you want to login as {{ email }}?</p>
         <button type="button" class="close" (click)="closeModal()">
           <span>&times;</span>
         </button>
