--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <app-login-page></app-login-page>
-    </div>
-  </div>
+<div class="container-fluid">
+  <app-login-page></app-login-page>
 </div>
