--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -38,7 +38,7 @@
             Password is required.
           </div>
           <div *ngIf="password.errors.pattern">
-            Password must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters.
+            Password must contain at least one number, an uppercase, a special character and at least 8 or more characters.
           </div>
         </div>
       </div>
